tests/fixtures/invalid/int_bitxor_float.py
# Cannot bitwise XOR Int and Float
x: float = 1 ^ 1.0
